# signals

./: README.md  githfield.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: feature-extraction.md
examples/: feed_value_factor.py
src/finsignals/: __init__.py  export.py  factors.py  features.py  universe.py
tests/: test_export.py  test_factors.py  test_features.py
