[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finsignals"
version = "0.1.0"
description = "Numerai Signals from FinField P2P field data: exact-Decimal features, cross-sectional rank in (0,1), submit-ready bloomberg_ticker,signal CSV"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["finfacts"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../facts/src"]
testpaths = ["tests"]
